--- a/front/src/index.css
+++ b/front/src/index.css
@@ -6,6 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-y:hidden;
+  height:100vh;
+  position: relative;
 }
 
 code {
